made the CTA button on mobile thicker, my vs live refresher is causing updating issues so I edited this in the google dev tools and applied styles, should apply.

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -111,6 +111,8 @@ header {
         .btn {
           @media @phone {
             width: 100%;
+            padding: 5%;
+            font-size: 1.6rem;
         }//media break
           .button(darkblue, white)
         }
